--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300..700&display=swap');
+    </style>
     <title>Todo List</title>
 </head>
+
 <body>
     <h1>Minha Lista de Tarefas</h1>
     <input placeholder="Digite a sua tarefa">
-    <button onclick= adicionarTarefa()>Adicionar</button>
+    <button onclick=adicionarTarefa()>Adicionar</button>
     <ul>
-        
+
     </ul>
 </body>
 <script src="script.js"></script>
+
 </html>
