--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300..700&display=swap');
-    </style>
+        @import url('https://fonts.googleapis.com/css2?family=Matemasie&display=swap');
+        </style>
     <title>Todo List</title>
 </head>
 
